# neural_network

./: .gitignore  CMakeLists.txt  main.cpp
math/: matrix.h  vector.h
math/functions/: sigmoid.h
math/utils/: empty_matrix_generator.h  random_matrix_generator.h
neural_network/: layer.cpp  layer.h  layer_descriptor.h  network.cpp  network.h  network_builder.cpp  network_builder.h  network_descriptor.h  train_data.h
